@@ -114,11 +114,15 @@ lazy val riffraff = project
       libraryDependencies ++= riffRaffDeps,
       Universal / javaOptions ++= Seq(
         s"-Dpidfile.path=/dev/null",
-        "-J-XX:MaxRAMFraction=2",
-        "-J-XX:InitialRAMFraction=2",
+        "-J-XX:MaxRAMPercentage=50.0",
+        "-J-XX:InitialRAMPercentage=50.0",
         "-J-XX:MaxMetaspaceSize=300m",
         "-J-Xlog:gc*",
-        s"-J-Xlog:gc:/var/log/${packageName.value}/gc.log"
+        s"-J-Xlog:gc:/var/log/${packageName.value}/gc.log",
+        // pegdown/parboiled v1 uses deep reflection blocked by Java 21 modules
+        "-J--add-opens=java.base/java.lang=ALL-UNNAMED",
+        "-J--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+        "-J--add-opens=java.base/java.util=ALL-UNNAMED"
       ),
       Universal / packageName := normalizedName.value,
       Universal / topLevelDirectory := Some(normalizedName.value),
